# factory

./: .gitignore  CMakeLists.txt  README.md  factory.c  factory_config.h.in  sock3.py
apps/: CMakeLists.txt  factory.c
machines/: CMakeLists.txt  prod_data.c  prod_data.h
